fixed issue of notes going off screen

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -50,7 +50,8 @@ body {
     min-height: 100px;
     max-height: 200px;
 
-    position: relative;
+    position: absolute;
+    left: 50vw;
 
     width: 150px;
     height: 150px;
